feat: added styles

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,3 +1,34 @@
+$maxWidth: 1280px;
 $backgroundSignUp: #F4F5FC;
 $formSubmitBackgroundColor: #5A61ED;
 $signUpLeftBackgroundColor:#5A61ED;
+$fontFamilyPTSans: 'PT Sans',
+sans-serif;
+$fontFamilyWorkSans: 'WorkSans',
+sans-serif;
+$fontWeight600: 600;
+$fontWeight500: 500;
+$fontWeight400: 400;
+$fontWeight200: 200;
+$fontWeight100: 100;
+$fontStyleNormal: normal;
+$fontSizeH1: 49px;
+$lineHeightH1: 63px;
+$letterSpacingH1: .5px;
+$fontSizeH2: 22px;
+$lineHeightH2: 26px;
+$letterSpacingH2: -.46px;
+$fontSizeButton: 14px;
+$lineHeightButton: 18px;
+$fontSizeMedium: 14px;
+$lineHeightMedium: 16px;
+$fontSizeSmall: 13px;
+$lineHeightSmall: 15px;
+$fontSizeUltraSmall: 12px;
+$lineHeightUltraSmall: 14px;
+$colorWhite: #fff;
+$colorBlack: #111;
+$colorGray: #7C7C7C;
+$colorUltraBlack: #000;
+$colorBlue: #5A61ED;
+$fieldsetBorderColor: #F2F2F2;
