--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,2 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Work+Sans:wght@100;200;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;400;500;600&display=swap');
