--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -18,7 +18,7 @@
   }
   &__left {
     width: 138px;
-    height: 480px;
+    height: 481px;
     background-color: $signUpLeftBackgroundColor;
     display: flex;
   }
@@ -39,7 +39,7 @@
   }
   &__right {
     width: 528px;
-    height: 480px;
+    height: 481px;
     background-color: $colorWhite;
     background-image: url(../img/SignUp.svg);
     background-repeat: no-repeat;
@@ -48,8 +48,9 @@
       width: 485px;
       height: 409px;
       padding: 39px 22px 33px;
-      display: flex;
-      flex-direction: column;
+      display: grid;
+      grid-template-rows: repeat(3, 1fr);
+      position: relative;
     }
   }
   &__title {
@@ -91,6 +92,9 @@
   }
   &__account {
     padding-top: 65px;
+    position: absolute;
+    bottom: 45px;
+    left: 20px;
   }
 }
 
@@ -116,8 +120,8 @@
 }
 
 .form {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 16px 13px;
   &__fieldset {}
   &__footer {
@@ -132,6 +136,8 @@
     padding: 7px 26px 7px 25px;
     background-color: $formSubmitBackgroundColor;
     justify-self: flex-end;
+    margin-top: 80px;
+    grid-column: 2;
   }
 }
 
@@ -155,6 +161,8 @@
   &--birthday {}
   &--gender {
     border-bottom: none;
+    justify-content: start;
+    column-gap: 19px;
   }
   &--password {}
   &--confirm-password {}
@@ -167,7 +175,8 @@
   font-size: $fontSizeMedium;
   line-height: $lineHeightMedium;
   background: transparent;
-  padding: 5px 0 6px;
+  padding: 5px 0 7px;
+  margin: 0;
   width: 100%;
   &--first-name {}
   &--last-name {}
@@ -184,7 +193,39 @@
 .img {}
 
 .custom-radio {
-  &__input {}
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+  margin: 0;
+  padding: 0;
+  &__input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    &:checked+.custom-radio__span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url(../img/circleRadio.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 6px;
+    }
+    &:disabled+.custom-radio__span {
+      border: 1px solid $colorGray;
+    }
+    &:focus+.custom-radio__span {
+      box-shadow: 0 0 5px $colorBlue;
+    }
+  }
+  &__span {
+    width: 12px;
+    height: 12px;
+    border: 0.7px solid $colorBlue;
+    border-radius: 50%;
+  }
   &__text {
     margin: 0;
     font-family: $fontFamilyWorkSans;
