--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -5,28 +5,37 @@
 }
 
 .sign-up {
-  width: 800px;
-  height: 600px;
+  max-width: 800px;
+  max-height: 600px;
   background-color: $backgroundSignUp;
   margin: 0 auto;
   &__container {
-    width: 665px;
-    height: 480px;
+    max-width: 665px;
+    max-height: 480px;
     padding: 60px 67px;
     display: grid;
-    grid-template-columns: 138px 528px;
+    grid-template-columns: .2fr 1fr;
+    @media screen and (max-width: 680px) {
+      padding: 30px;
+    }
+    @media screen and (max-width: 610px) {
+      grid-template-columns: 1fr;
+      grid-template-rows: min-content max-content;
+    }
   }
   &__left {
-    width: 138px;
-    height: 481px;
+    max-width: 138px;
+    max-height: 481px;
     background-color: $signUpLeftBackgroundColor;
     display: flex;
+    align-items: flex-end;
+    @media screen and (max-width: 610px) {
+      max-width: 100%;
+    }
   }
   &__text {
     margin: 0;
     padding: 12px 0 50px 80px;
-    width: 162px;
-    height: 63px;
     font-family: $fontFamilyPTSans;
     font-weight: $fontWeight400;
     font-style: $fontStyleNormal;
@@ -35,22 +44,37 @@
     letter-spacing: $letterSpacingH1;
     color: $colorWhite;
     transform: rotate(-90deg);
-    align-self: flex-end;
+    @media screen and (max-width: 610px) {
+      padding: 15px;
+      transform: rotate(0deg);
+      font-size: $fontSizeH2;
+      line-height: $lineHeightH2;
+    }
   }
   &__right {
-    width: 528px;
+    max-width: 528px;
     height: 481px;
     background-color: $colorWhite;
     background-image: url(../img/SignUp.svg);
     background-repeat: no-repeat;
     background-position: right bottom;
+    @media screen and (max-width: 610px) {
+      max-width: 100%;
+      height: 426px;
+    }
     &--container {
-      width: 485px;
+      max-width: 485px;
       height: 409px;
       padding: 39px 22px 33px;
       display: grid;
       grid-template-rows: repeat(3, 1fr);
       position: relative;
+      @media screen and (max-width: 610px) {
+        padding: 15px;
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
     }
   }
   &__title {
@@ -123,6 +147,10 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 16px 13px;
+  @media screen and (max-width: 545px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
   &__fieldset {}
   &__footer {
     display: flex;
@@ -138,6 +166,9 @@
     justify-self: flex-end;
     margin-top: 80px;
     grid-column: 2;
+    @media screen and (max-width: 610px) {
+      margin-top: 60px;
+    }
   }
 }
 
@@ -149,11 +180,15 @@
   line-height: $lineHeightUltraSmall;
   color: $colorGray;
   border: none;
-  width: 235px;
+  max-width: 235px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid $fieldsetBorderColor;
+  @media screen and (max-width: 545px) {
+    max-width: 435px;
+    width: 100%;
+  }
   &--first-name {}
   &--last-name {}
   &--nationality {}
@@ -178,6 +213,11 @@
   padding: 5px 0 7px;
   margin: 0;
   width: 100%;
+  &::placeholder {
+    @media screen and (max-width: 450px) {
+      font-size: 12px;
+    }
+  }
   &--first-name {}
   &--last-name {}
   &--nationality {}
