--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,12 +6,10 @@
 
 .sign-up {
   max-width: 800px;
-  max-height: 600px;
   background-color: $backgroundSignUp;
   margin: 0 auto;
   &__container {
     max-width: 665px;
-    max-height: 480px;
     padding: 60px 67px;
     display: grid;
     grid-template-columns: .2fr 1fr;
@@ -25,7 +23,6 @@
   }
   &__left {
     max-width: 138px;
-    max-height: 481px;
     background-color: $signUpLeftBackgroundColor;
     display: flex;
     align-items: flex-end;
@@ -53,21 +50,18 @@
   }
   &__right {
     max-width: 528px;
-    height: 481px;
     background-color: $colorWhite;
     background-image: url(../img/SignUp.svg);
     background-repeat: no-repeat;
     background-position: right bottom;
     @media screen and (max-width: 610px) {
       max-width: 100%;
-      height: 426px;
     }
     &--container {
       max-width: 485px;
-      height: 409px;
       padding: 39px 22px 33px;
       display: grid;
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-rows: min-content min-content 1fr;
       position: relative;
       @media screen and (max-width: 610px) {
         padding: 15px;
@@ -119,6 +113,14 @@
     position: absolute;
     bottom: 45px;
     left: 20px;
+    @media screen and (max-width: 610px) {
+      bottom: 25px;
+    }
+    @media screen and (max-width: 390px) {
+      position: static;
+      padding-top: 20px;
+      justify-content: center;
+    }
   }
 }
 
@@ -150,6 +152,10 @@
   @media screen and (max-width: 545px) {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+  @media screen and (max-width: 390px) {
+    justify-content: center;
   }
   &__fieldset {}
   &__footer {
@@ -169,6 +175,9 @@
     @media screen and (max-width: 610px) {
       margin-top: 60px;
     }
+    @media screen and (max-width: 545px) {
+      margin-top: 20px;
+    }
   }
 }
 
@@ -186,7 +195,7 @@
   align-items: center;
   border-bottom: 1px solid $fieldsetBorderColor;
   @media screen and (max-width: 545px) {
-    max-width: 435px;
+    max-width: 453px;
     width: 100%;
   }
   &--first-name {}
@@ -237,7 +246,7 @@
   align-items: center;
   column-gap: 6px;
   margin: 0;
-  padding: 0;
+  padding: 5px 0 0;
   &__input {
     position: absolute;
     width: 1px;
