feat: pixel perfect

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -20,6 +20,8 @@ $lineHeightH2: 26px;
 $letterSpacingH2: -.46px;
 $fontSizeButton: 14px;
 $lineHeightButton: 18px;
+$fontSizeLarge: 15px;
+$lineHeightLarge: 17px;
 $fontSizeMedium: 14px;
 $lineHeightMedium: 16px;
 $fontSizeSmall: 13px;
