--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -84,7 +84,7 @@
     margin: 0;
     font-family: $fontFamilyWorkSans;
     color: $colorBlack;
-    font-size: $fontSizeMedium;
+    font-size: $fontSizeLarge;
     line-height: $lineHeightMedium;
     font-weight: $fontWeight200;
     padding-bottom: 20px;
@@ -95,23 +95,19 @@
   &__birthday {
     display: flex;
     justify-content: space-between;
-    max-width: 56px;
-    margin-right: 10px;
   }
   &__month {
     display: flex;
     justify-content: space-between;
-    margin-right: 10px;
   }
   &__year {
     display: flex;
     justify-content: space-between;
-    max-width: 68px;
   }
   &__account {
     padding-top: 65px;
     position: absolute;
-    bottom: 45px;
+    bottom: 43px;
     left: 20px;
     @media screen and (max-width: 610px) {
       bottom: 25px;
@@ -170,7 +166,7 @@
     padding: 7px 26px 7px 25px;
     background-color: $formSubmitBackgroundColor;
     justify-self: flex-end;
-    margin-top: 80px;
+    margin-top: 81px;
     grid-column: 2;
     @media screen and (max-width: 610px) {
       margin-top: 60px;
@@ -203,6 +199,13 @@
   &--nationality {}
   &--email {}
   &--birthday {}
+  &--birthday-container {
+    display: grid;
+    grid-template-columns: 55px 1fr 70px;
+    column-gap: 10px;
+    width: 100%;
+    padding: 4px 0;
+  }
   &--gender {
     border-bottom: none;
     justify-content: start;
@@ -223,9 +226,7 @@
   margin: 0;
   width: 100%;
   &::placeholder {
-    @media screen and (max-width: 450px) {
-      font-size: 12px;
-    }
+    font-size: $fontSizeLarge;
   }
   &--first-name {}
   &--last-name {}
@@ -246,7 +247,9 @@
   align-items: center;
   column-gap: 6px;
   margin: 0;
-  padding: 5px 0 0;
+  @media screen and (max-width: 545px) {
+    padding-top: 4px;
+  }
   &__input {
     position: absolute;
     width: 1px;
@@ -290,14 +293,32 @@
     margin: 0;
     color: $colorUltraBlack;
     font-weight: $fontWeight200;
-    font-size: $fontSizeSmall;
+    font-size: $fontSizeLarge;
     line-height: $lineHeightSmall;
     padding-right: 5px;
   }
   &__link {
     font-weight: $fontWeight200;
-    font-size: $fontSizeSmall;
+    font-size: $fontSizeMedium;
     line-height: $lineHeightSmall;
     color: $colorBlue;
   }
+}
+
+.select {
+  width: 100%;
+  border: none;
+  font-family: $fontFamilyWorkSans;
+  font-size: $fontSizeMedium;
+  line-height: $lineHeightMedium;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  appearance: none;
+  background-image: url(../img/down.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+  &__birthday {}
+  &__month {}
+  &__year {}
 }
