--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -34,3 +34,4 @@ $colorGray: #7C7C7C;
 $colorUltraBlack: #000;
 $colorBlue: #5A61ED;
 $fieldsetBorderColor: #F2F2F2;
+$fieldsetErrorBorderColor: #ff5656;
