--- a/scss/style.css
+++ b/scss/style.css
@@ -4,17 +4,20 @@
   max-width: 1280px;
   margin: 0 auto;
 }
+.root--hidden {
+  overflow: hidden;
+}
 
 .sign-up {
   max-width: 800px;
-  background-color: #F4F5FC;
+  background-color: #f4f5fc;
   margin: 0 auto;
 }
 .sign-up__container {
   max-width: 665px;
   padding: 60px 67px;
   display: grid;
-  grid-template-columns: .2fr 1fr;
+  grid-template-columns: 0.2fr 1fr;
 }
 @media screen and (max-width: 680px) {
   .sign-up__container {
@@ -27,9 +30,14 @@
     grid-template-rows: min-content max-content;
   }
 }
+@media screen and (max-width: 430px) {
+  .sign-up__container {
+    padding: 10px;
+  }
+}
 .sign-up__left {
   max-width: 138px;
-  background-color: #5A61ED;
+  background-color: #5a61ed;
   display: flex;
   align-items: flex-end;
 }
@@ -56,6 +64,10 @@
     transform: rotate(0deg);
     font-size: 22px;
     line-height: 26px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 270px;
   }
 }
 .sign-up__right {
@@ -93,6 +105,21 @@
   color: #111;
   font-family: "WorkSans", sans-serif;
   font-weight: 600;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
+}
+@media screen and (max-width: 780px) {
+  .sign-up__title {
+    max-width: 400px;
+  }
+}
+@media screen and (max-width: 560px) {
+  .sign-up__title {
+    max-width: 270px;
+    white-space: normal;
+  }
 }
 .sign-up__subtitle {
   margin: 0;
@@ -102,6 +129,21 @@
   line-height: 16px;
   font-weight: 200;
   padding-bottom: 20px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
+}
+@media screen and (max-width: 780px) {
+  .sign-up__subtitle {
+    max-width: 400px;
+  }
+}
+@media screen and (max-width: 560px) {
+  .sign-up__subtitle {
+    max-width: 270px;
+    white-space: normal;
+  }
 }
 .sign-up__birthday {
   display: flex;
@@ -150,7 +192,16 @@
   cursor: pointer;
 }
 .button:hover {
-  opacity: .8;
+  opacity: 0.8;
+}
+.button--inactive {
+  color: #b8b8b8;
+  background: #ededed;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .form {
@@ -180,7 +231,7 @@
 .form__submit {
   width: 154px;
   padding: 7px 26px 7px 25px;
-  background-color: #5A61ED;
+  background-color: #5a61ed;
   justify-self: flex-end;
   margin-top: 81px;
   grid-column: 2;
@@ -195,6 +246,31 @@
     margin-top: 20px;
   }
 }
+.form__input-error {
+  font-size: 12px;
+  color: #ff5656;
+  opacity: 0;
+  transition: 0.3s;
+}
+.form__input-error-active {
+  opacity: 1;
+}
+
+.input {
+  border: none;
+  outline: none;
+  color: #111;
+  font-size: 14px;
+  line-height: 16px;
+  background: transparent;
+  padding: 5px 0 7px;
+  margin: 0;
+  width: 100%;
+  position: relative;
+}
+.input::placeholder {
+  font-size: 15px;
+}
 
 .fieldset {
   margin: 0;
@@ -202,13 +278,14 @@
   font-family: "WorkSans", sans-serif;
   font-size: 12px;
   line-height: 14px;
-  color: #7C7C7C;
+  color: #7c7c7c;
   border: none;
   max-width: 235px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #F2F2F2;
+  border-bottom: 1px solid #f2f2f2;
+  position: relative;
 }
 @media screen and (max-width: 545px) {
   .fieldset {
@@ -230,21 +307,6 @@
   border-bottom: none;
   justify-content: start;
   column-gap: 19px;
-}
-
-.input {
-  border: none;
-  outline: none;
-  color: #111;
-  font-size: 14px;
-  line-height: 16px;
-  background: transparent;
-  padding: 5px 0 7px;
-  margin: 0;
-  width: 100%;
-}
-.input::placeholder {
-  font-size: 15px;
 }
 
 .custom-radio {
@@ -276,15 +338,15 @@
   background-size: 6px;
 }
 .custom-radio__input:disabled + .custom-radio__span {
-  border: 1px solid #7C7C7C;
+  border: 1px solid #7c7c7c;
 }
 .custom-radio__input:focus + .custom-radio__span {
-  box-shadow: 0 0 5px #5A61ED;
+  box-shadow: 0 0 5px #5a61ed;
 }
 .custom-radio__span {
   width: 12px;
   height: 12px;
-  border: 0.7px solid #5A61ED;
+  border: 0.7px solid #5a61ed;
   border-radius: 50%;
 }
 .custom-radio__text {
@@ -310,7 +372,7 @@
   font-weight: 200;
   font-size: 14px;
   line-height: 15px;
-  color: #5A61ED;
+  color: #5a61ed;
 }
 
 .select {
@@ -327,4 +389,63 @@
   background-repeat: no-repeat;
   background-position: right;
   cursor: pointer;
+}
+
+.pop-up {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+}
+.pop-up--opened {
+  visibility: visible;
+  opacity: 1;
+}
+.pop-up__overlay {
+  max-width: 120px;
+  width: 100%;
+  position: relative;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+.pop-up__header {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.pop-up__title {
+  margin: 0;
+  font-family: "PT Sans", sans-serif;
+  font-size: 22px;
+  line-height: 26px;
+}
+.pop-up__subtitle {
+  margin: 0;
+  font-size: 14px;
+  line-height: 16px;
+}
+.pop-up__close {
+  position: absolute;
+  right: -40px;
+  top: -40px;
+  background-image: url(../img/Close.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 30px;
+  height: 30px;
+  border: none;
+}
+.pop-up__close:hover {
+  cursor: pointer;
+  opacity: 0.5;
 }
