--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -231,7 +231,7 @@
 }
 
 .input {
-  border: none;
+  border: 1px solid transparent;
   outline: none;
   color: $colorBlack;
   font-size: $fontSizeMedium;
