--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -35,6 +35,6 @@ $colorUltraBlack: #000;
 $colorBlue: #5a61ed;
 $fieldsetBorderColor: #f2f2f2;
 $fieldsetErrorBorderColor: #ff5656;
-$popUpTransition: 0.5s;
+$transition05: 0.5s;
 $popUpShadow: rgba(0, 0, 0, 0.5);
 $popUpCloseOpacity: 0.5;
