--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import './fonts';
-@import './vars';
-@import './global';
-@import './index';
+@import "./fonts";
+@import "./vars";
+@import "./global";
+@import "./index";
