fix: required filds and index.js

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -9,6 +9,7 @@ svg {
     opacity: 0;
     visibility: hidden;
     transition: $transition05;
+    padding-left: 5px;
     &--visibly {
       opacity: 1;
       visibility: visible;
