--- a/scss/style.css
+++ b/scss/style.css
@@ -10,6 +10,7 @@ svg {
   opacity: 0;
   visibility: hidden;
   transition: 0.5s;
+  padding-left: 5px;
 }
 .img__doneMark--visibly {
   opacity: 1;
